
Made documentation and code changes to address perlbug:
https://rt.perl.org/rt3/Ticket/Display.html?id=30229

Added in changes from the distributed-with-perl version.  This took 
care of perlbug: https://rt.perl.org/rt3/Ticket/Display.html?id=34902
It also took care of suggestion from Matthijs Bomhoff <matthijs
at bomhoff dot nl>.

Made documentation changes (added EXAMPLES) as per a suggestion
from Gabor Blasko <gblasko at cs dot columbia dot edu>

belg4mit at MIT dot EDU reported that $columns==1 die'd.  No longer.

Added tests for each bug report.

= 2005/08/24

Added $separator2 and tests for $separator and $separator2

Aristotle Pagaltzis <pagaltzis at gmx.de> contributed a new version of
expand() that is faster.

Jarkko Hietaniemi <jhi at cc.hut.fi> sent in perl change #17917 which
fixed a bug in wrap.

Matthew Durante <matthew_durante at hotmail.com> and 
Don Buchholz <don at truedisk.com> sent in a doc patches.

= 2001/09/29

Philip Newton <Philip.Newton at gmx.net> sent in a clean patch that
added support for defining words differently; that prevents 
Text::Wrap from untainting strings; and that fixes a documentation
bug.

So that fill.t can be used in the version included in the perl
distribution, fill.t no longer uses File::Slurp.

Both Sweth Chandramouli <svc at sweth.net> and Drew Degentesh 
<ddegentesh at daed.com> both objected to the automatic unexpand
that Text::Wrap does on its results.  Drew sent a patch which
has been integrated.

Way back in '97, Joel Earl <jrearl at VNET.IBM.COM> asked that
it be possible to use a line separator other than \n when
adding new lines.  There is now support for that.

= 2001/01/30

Bugfix by Michael G Schwern <schwern at pobox.com>: don't add extra
whitespace when working one an array of input (as opposed to a 
single string).

Performance rewrite: use m/\G/ rather than s///.

You can now specify that words that are too long to wrap can simply
overflow the line.  Feature requested by James Hoagland 